initialisation du crud produit
